Propagate --enable-preview property in ProcessTools